[package]
name = "cuda-emotion"
version = "0.1.0"
edition = "2021"
description = "Emotion engine — valence/arousal, behavioral modulation, contagion"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-emotion"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
